--- a/02_introduccion_a_django.ipynb
+++ b/02_introduccion_a_django.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "Entre otras cosas, *Django* cuenta con las siguientes funcionalidades:\n",
     "\n",
-    "* Instalación y configuración sensilla y rápida.\n",
+    "* Instalación y configuración sencilla y rápida.\n",
     "* Cuenta con un ORM avanzado.\n",
     "* Utiliza plantillas (templates) para desplegar aplicaciones.\n",
     "* Soporta múltipes idiomas.\n",
@@ -27,7 +27,7 @@
     "* Se apega al patrón [MVC](https://es.wikipedia.org/wiki/Modelo%E2%80%93vista%E2%80%93controlador) mediante la implementación del concepto  \"Model View Template\".\n",
     "* Hace énfasis en la seguridad.\n",
     "* Es escalable.\n",
-    "* Es muy versátil, ya que no sólo es una execlente plataforma para:\n",
+    "* Es muy versátil, ya que es una execlente plataforma para:\n",
     "    * Deasrrollar aplicaciones web.\n",
     "    * Desarrollar API web.\n",
     "    * Desarrollo de aplicaciones móviles.\n",
@@ -190,6 +190,15 @@
     "**Nota:**\n",
     "    \n",
     "El comando *tree* es propio de sistemas basados en GNU/Linux. En caso de que se ejecute el siguiente comando en un entorno distinto al de la VM proporcionada por Pythonista<sup>®</sup>, es posible que tenga que instalarlo. En otros sistemas no es posible ejecutar este comando."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!tree"
    ]
   },
   {
