--- a/01_introduccion.ipynb
+++ b/01_introduccion.ipynb
@@ -8,32 +8,40 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Objetivos de este módulo.\n",
+    "\n",
+    "Este módulo tiene como objetivo el de presentar de forma detallada las principales funcionalidades del framework para desarrollo de aplicaciones web, *Django*.\n",
+    "\n",
+    "El módulo consta de dos secciones:\n",
+    "\n",
+    "### Primera sección: \n",
+    "\n",
+    "La primera sección es una introducción al desarrollo de aplicaciones web y a las funcionalidades básicas de  *Django* en un entorno de prueba.\n",
+    "\n",
+    "* Introducción al protocolo HTTP.\n",
+    "* Conceptos básicos relacionados con *Django*.\n",
+    "* Instalación básica.\n",
+    "* Configuración mínima.\n",
+    "* Funcionalidades.\n",
+    "* Desarrollo de aplicaciones web simples.\n",
+    "* Desarrollo de una API basada en REST. \n",
+    "\n",
+    "## Segunda sección.\n",
+    "\n",
+    "Durante la segunda sección se estudiará el modo de crear un producto específico.\n",
+    "\n",
+    "* Definiendo las especificaciones y requeirmientos de las aplicaciones del producto.\n",
+    "* Definiendo los componentes y modelos del producto.\n",
+    "* Diseñando la arquitectura de datos de las aplicaciones.\n",
+    "* Configurando y desplegando el entorno de desarrollo y de pruebas.\n",
+    "* Definiendo y realizando scripts de pruebas para las aplicaciones del producto.\n",
+    "* Preparando el entrono de producción en un servidor AWS.\n",
+    "* Migrando a producción.\n",
+    "* Publicando el producto."
+   ]
   },
   {
    "cell_type": "markdown",
