--- a/04_preparacion_del_entorno_de_prueba.ipynb
+++ b/04_preparacion_del_entorno_de_prueba.ipynb
@@ -11,13 +11,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**ADVERTENCIA:** Es necesario haber creado previamente el proyecto definido en la notebook [02_introduccion_a_django.ipynb](02_introduccion_a_django.ipynb) localizado en el directorio [tutorial](tutorial)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## El archivo *settings.py*.\n",
-    "\n",
-    "**Nota:** Es necesario haber creado el proyecto localizado en el directorio [tutorial](tutorial).\n",
     "\n",
     "La configuración básica de un proyecto de Django se encuentra en un archivo de Python llamado *settings.py* \n",
     "\n",
-    "En el caso del proyecto creado en la notebook [02_introduccion_a_django.ipynb](02_introduccion_a_django.ipynb), dicho arcivo se encuentra en [tutorial/tutorial/settings.py](tutorial/tutorial/settings.py)"
+    "En el caso del proyecto creado previamente, dicho archivo se encuentra en [*tutorial/tutorial/settings.py*](tutorial/tutorial/settings.py)"
    ]
   },
   {
@@ -26,12 +31,13 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "* La siguiente celda contiene el comando mágico de Jupyter *%pycat*, el cual permite ver el contenido de un archivo de Python en una ventana."
+    "* El comando mágico de Jupyter *%pycat* permite ver el contenido de un archivo de Python en una ventana del navegador.\n",
+    "* La siguiente celda desplegará el contenido del archivo *tutorial/tutorial/settings.py*\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,16 +48,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Este archivo debe de ser modificado conforme a los requerimientos del proyecto.\n",
-    "\n",
-    "Todas las opciones disponibles para la configuración de *Django* están disponibles en https://docs.djangoproject.com/en/2.1/ref/settings."
+    "* El archivo define diversas variables, las cuales se encuentran escritas en mayúsculas, que definen ciertos parámentros de configuración del proyecto."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La base de datos del proyecto.\n",
+    "### La base de datos del proyecto.\n",
     "\n",
     "En el caso del proyecto actual, se utilizará [SQLite](https://www.sqlite.org/index.html) y el archivo correspondiente a la base de datos se localiza en *tutoria/db.sqlite3*.\n",
     "\n",
@@ -62,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Middleware.\n",
+    "### Middleware.\n",
     "\n",
     "https://docs.djangoproject.com/en/1.10/ref/middleware/#module-django.middleware"
    ]
@@ -85,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,47 +98,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['ALLOWED_HOSTS',\n",
-       " 'AUTH_PASSWORD_VALIDATORS',\n",
-       " 'BASE_DIR',\n",
-       " 'DATABASES',\n",
-       " 'DEBUG',\n",
-       " 'INSTALLED_APPS',\n",
-       " 'LANGUAGE_CODE',\n",
-       " 'MIDDLEWARE',\n",
-       " 'ROOT_URLCONF',\n",
-       " 'SECRET_KEY',\n",
-       " 'STATIC_URL',\n",
-       " 'TEMPLATES',\n",
-       " 'TIME_ZONE',\n",
-       " 'USE_I18N',\n",
-       " 'USE_L10N',\n",
-       " 'USE_TZ',\n",
-       " 'WSGI_APPLICATION',\n",
-       " '__builtins__',\n",
-       " '__cached__',\n",
-       " '__doc__',\n",
-       " '__file__',\n",
-       " '__loader__',\n",
-       " '__name__',\n",
-       " '__package__',\n",
-       " '__spec__',\n",
-       " 'os']"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dir(settings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "settings.DATABASES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "settings.DATABASES={'proyeto': {'ENGINE': 'django.db.backends.sqlite3',\n",
+    "  'NAME': '/opt/pythonista/py231/tutorial/db.sqlite3'}}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "settings.DATABASES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "settings.MIDDLEWARE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "settings.configure()"
    ]
   },
   {
@@ -144,23 +158,6 @@
     "## Despliegue en producción.\n",
     "\n",
     "https://docs.djangoproject.com/en/2.1/howto/deployment/checklist/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/opt/pythonista/py231/tutorial\n"
-     ]
-    }
-   ],
-   "source": [
-    "%cd tutorial"
    ]
   },
   {
