--- a/04_preparacion_del_entorno_de_prueba.ipynb
+++ b/04_preparacion_del_entorno_de_prueba.ipynb
@@ -93,6 +93,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import tutorial.settings as settings"
    ]
   },
@@ -120,7 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "settings.DATABASES={'proyeto': {'ENGINE': 'django.db.backends.sqlite3',\n",
+    "settings.DATABASES={'proyecto': {'ENGINE': 'django.db.backends.sqlite3',\n",
     "  'NAME': '/opt/pythonista/py231/tutorial/db.sqlite3'}}"
    ]
   },
@@ -140,15 +149,6 @@
    "outputs": [],
    "source": [
     "settings.MIDDLEWARE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "settings.configure()"
    ]
   },
   {
