--- a/06_estructura_de_una_aplicacion.ipynb
+++ b/06_estructura_de_una_aplicacion.ipynb
@@ -8,11 +8,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Las aplicaciones de un sitio cuentan con una estructura básica que contiene los archivos:\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
