--- a/02_introduccion_a_django.ipynb
+++ b/02_introduccion_a_django.ipynb
@@ -57,9 +57,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: django in /home/oi/pythonista/lib/python3.6/site-packages (2.1.5)\n",
+      "Requirement already satisfied: pytz in /home/oi/pythonista/lib/python3.6/site-packages (from django) (2018.9)\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install django"
    ]
@@ -90,9 +99,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31;1mCommandError: '/opt/pythonista/py231/tutorial' already exists\r\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "!django-admin startproject tutorial"
    ]
@@ -115,9 +133,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/opt/pythonista/py231/tutorial\n"
+     ]
+    }
+   ],
    "source": [
     "%cd tutorial"
    ]
@@ -135,11 +161,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".\r\n",
+      "├── db.sqlite3\r\n",
+      "├── main\r\n",
+      "│   ├── admin.py\r\n",
+      "│   ├── apps.py\r\n",
+      "│   ├── __init__.py\r\n",
+      "│   ├── migrations\r\n",
+      "│   │   └── __init__.py\r\n",
+      "│   ├── models.py\r\n",
+      "│   ├── tests.py\r\n",
+      "│   └── views.py\r\n",
+      "├── manage.py\r\n",
+      "└── tutorial\r\n",
+      "    ├── __init__.py\r\n",
+      "    ├── __pycache__\r\n",
+      "    │   ├── __init__.cpython-36.pyc\r\n",
+      "    │   ├── settings.cpython-36.pyc\r\n",
+      "    │   ├── urls.cpython-36.pyc\r\n",
+      "    │   └── wsgi.cpython-36.pyc\r\n",
+      "    ├── settings.py\r\n",
+      "    ├── urls.py\r\n",
+      "    └── wsgi.py\r\n",
+      "\r\n",
+      "4 directories, 17 files\r\n"
+     ]
+    }
+   ],
    "source": [
     "!tree"
    ]
@@ -174,9 +231,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31;1mCommandError: 'main' conflicts with the name of an existing Python module and cannot be used as an app name. Please try another name.\r\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "!./manage.py startapp main"
    ]
@@ -194,20 +260,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".\r\n",
+      "├── db.sqlite3\r\n",
+      "├── main\r\n",
+      "│   ├── admin.py\r\n",
+      "│   ├── apps.py\r\n",
+      "│   ├── __init__.py\r\n",
+      "│   ├── migrations\r\n",
+      "│   │   └── __init__.py\r\n",
+      "│   ├── models.py\r\n",
+      "│   ├── __pycache__\r\n",
+      "│   │   └── __init__.cpython-36.pyc\r\n",
+      "│   ├── tests.py\r\n",
+      "│   └── views.py\r\n",
+      "├── manage.py\r\n",
+      "└── tutorial\r\n",
+      "    ├── __init__.py\r\n",
+      "    ├── __pycache__\r\n",
+      "    │   ├── __init__.cpython-36.pyc\r\n",
+      "    │   ├── settings.cpython-36.pyc\r\n",
+      "    │   ├── urls.cpython-36.pyc\r\n",
+      "    │   └── wsgi.cpython-36.pyc\r\n",
+      "    ├── settings.py\r\n",
+      "    ├── urls.py\r\n",
+      "    └── wsgi.py\r\n",
+      "\r\n",
+      "5 directories, 18 files\r\n"
+     ]
+    }
+   ],
    "source": [
     "!tree"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "main\r\n",
+      "├── admin.py\r\n",
+      "├── apps.py\r\n",
+      "├── __init__.py\r\n",
+      "├── migrations\r\n",
+      "│   └── __init__.py\r\n",
+      "├── models.py\r\n",
+      "├── __pycache__\r\n",
+      "│   └── __init__.cpython-36.pyc\r\n",
+      "├── tests.py\r\n",
+      "└── views.py\r\n",
+      "\r\n",
+      "2 directories, 8 files\r\n"
+     ]
+    }
+   ],
    "source": [
     "!tree main"
    ]
@@ -253,7 +372,36 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Performing system checks...\n",
+      "\n",
+      "System check identified no issues (0 silenced).\n",
+      "\u001b[31m\n",
+      "You have 15 unapplied migration(s). Your project may not work properly until you apply the migrations for app(s): admin, auth, contenttypes, sessions.\u001b[0m\n",
+      "\u001b[31mRun 'python manage.py migrate' to apply them.\n",
+      "\u001b[0m\n",
+      "February 07, 2019 - 22:28:00\n",
+      "Django version 2.1.5, using settings 'tutorial.settings'\n",
+      "Starting development server at http://0.0.0.0:5000/\n",
+      "Quit the server with CONTROL-C.\n",
+      "[07/Feb/2019 22:28:06] \u001b[m\"GET / HTTP/1.1\" 200 16348\u001b[0m\n",
+      "[07/Feb/2019 22:28:06] \u001b[m\"GET /static/admin/css/fonts.css HTTP/1.1\" 200 423\u001b[0m\n",
+      "[07/Feb/2019 22:28:06] \u001b[m\"GET /static/admin/fonts/Roboto-Regular-webfont.woff HTTP/1.1\" 200 80304\u001b[0m\n",
+      "[07/Feb/2019 22:28:06] \u001b[m\"GET /static/admin/fonts/Roboto-Bold-webfont.woff HTTP/1.1\" 200 82564\u001b[0m\n",
+      "[07/Feb/2019 22:28:06] \u001b[m\"GET /static/admin/fonts/Roboto-Light-webfont.woff HTTP/1.1\" 200 81348\u001b[0m\n",
+      "[07/Feb/2019 22:28:16] \u001b[32m\"GET /admin HTTP/1.1\" 301 0\u001b[0m\n",
+      "[07/Feb/2019 22:28:16] \u001b[32m\"GET /admin/ HTTP/1.1\" 302 0\u001b[0m\n",
+      "[07/Feb/2019 22:28:16] \u001b[m\"GET /admin/login/?next=/admin/ HTTP/1.1\" 200 1819\u001b[0m\n",
+      "[07/Feb/2019 22:28:16] \u001b[m\"GET /static/admin/css/login.css HTTP/1.1\" 200 1203\u001b[0m\n",
+      "[07/Feb/2019 22:28:16] \u001b[m\"GET /static/admin/css/responsive.css HTTP/1.1\" 200 17976\u001b[0m\n",
+      "[07/Feb/2019 22:28:16] \u001b[m\"GET /static/admin/css/base.css HTTP/1.1\" 200 16225\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "! ./manage.py runserver 0.0.0.0:5000"
    ]
