--- a/05_mvc_mvt_y_api_rest.ipynb
+++ b/05_mvc_mvt_y_api_rest.ipynb
@@ -26,9 +26,9 @@
    "source": [
     "### *Modelo*.\n",
     "\n",
-    "El Modelo corresponde a la estructura de datos de la aplicación, la cual por lo general es gestionada por una base e datos y puede ser ligada a una estructura orientada a objetos mediante un Modelo Relacional de Objetos (ORM por sus siglas en inglés). \n",
+    "El Modelo corresponde a la estructura de datos de la aplicación, la cual por lo general es gestionada por una base de datos y puede ser ligada a una estructura orientada a objetos mediante un Modelo Relacional de Objetos (ORM por sus siglas en inglés). \n",
     "\n",
-    "El estado de una aplicación se refleja en el modelo, mientras que las vistas y los contrloadores son interfaces que permiten interactuar con el modelo."
+    "El estado de una aplicación se refleja en el modelo, mientras que las vistas y los controladores son interfaces que permiten interactuar con el modelo."
    ]
   },
   {
@@ -44,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###*Vista*.\n",
+    "### *Vista*.\n",
     "\n",
     "La vista es el modo en el que el estado del Modelo es presentado al usuario. "
    ]
@@ -64,8 +64,8 @@
     "* El *Modelo* está ligado a un *ORM*.\n",
     "  * Cada modelo de Django es una subclase de la clase *django.db.models.Model*.\n",
     "  * Un modelo por lo general corresponde a una tabla de la base de datos.\n",
-    "  * Un campo de la tabla corresponde una instancia de un modelo.\n",
-    "  * Los atributos de un objeto corresponde a un elemento de la columna de un campo. \n",
+    "  * Un registro de la tabla corresponde una instancia de un modelo.\n",
+    "  * Los atributos de un objeto corresponden a un campo de un campo. \n",
     "* Las *Vistas* hacen la vez del controlador y gestionan todas las reglas de negocio.\n",
     "* Las *Plantillas* (Templates), se encargan de presentar una interfaz al usuario."
    ]
@@ -78,13 +78,13 @@
     "\n",
     "### Aplicación web.\n",
     "\n",
-    "Una aplicación web por lo general está enfocada a realizar transacciones que son accesibles a un usuario final y em que en la que la interfaz juega un papel predominate.\n",
+    "Una aplicación web por lo general está enfocada a realizar transacciones que son accesibles a un usuario final y en las que la interfaz juega un papel predominate.\n",
     "\n",
     "### Servicio web.\n",
     "\n",
     "Un servicio web está enfocado a la realización de transacciones en la que el énfasis se hace en la correcta transmisión de datos.\n",
     "\n",
-    "### *Endpoints*.\n",
+    "### Puntos de acceso (*Endpoints*).\n",
     "\n",
     "Un *endpoint* es una URL a la que se puede acceder a un servicio web en particular.\n",
     "\n",
