--- a/01_introduccion.ipynb
+++ b/01_introduccion.ipynb
@@ -38,7 +38,7 @@
     "* Diseñando la arquitectura de datos de las aplicaciones.\n",
     "* Configurando y desplegando el entorno de desarrollo y de pruebas.\n",
     "* Definiendo y realizando scripts de pruebas para las aplicaciones del producto.\n",
-    "* Preparando el entrono de producción en un servidor AWS.\n",
+    "* Preparando el entorno de producción en un servidor AWS.\n",
     "* Migrando a producción.\n",
     "* Publicando el producto."
    ]
