--- a/06_estructura_de_una_aplicacion_basica.ipynb
+++ b/06_estructura_de_una_aplicacion_basica.ipynb
@@ -117,7 +117,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "help(django.urls)"
@@ -151,7 +153,7 @@
     "En este caso, la función Esta función *django.urls.include()* permite cargar un archivo con una estructura de un archivo *urls.py* localizado en otra ruta.\n",
     "\n",
     "``` python\n",
-    "django.urls.include('<ruta>', includes('<modulo>')\n",
+    "django.urls.include('<ruta>', include('<modulo>')\n",
     "```"
    ]
   },
@@ -163,7 +165,7 @@
     "\n",
     "* Modificar el archivo *tutorial/tutorial/urls.py* con el siguiente código:\n",
     "\n",
-    "```\n",
+    "``` python\n",
     "from django.contrib import admin\n",
     "from django.urls import include, path\n",
     "\n",
@@ -228,7 +230,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "%cat tutorial/main/views.py"
@@ -240,8 +244,7 @@
    "source": [
     "* Modifique el archivo *tutorial/main/views.py* de tal forma que contenga lo siguiente:\n",
     "\n",
-    "```\n",
-    "from django.shortcuts import render\n",
+    "``` python\n",
     "from django.http import HttpResponse\n",
     "\n",
     "# Create your views here.\n",
