--- a/07_peticiones_y_respuestas.ipynb
+++ b/07_peticiones_y_respuestas.ipynb
@@ -44,7 +44,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "help(django.http)"
@@ -115,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,132 +126,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on class HttpResponse in module django.http.response:\n",
-      "\n",
-      "class HttpResponse(HttpResponseBase)\n",
-      " |  An HTTP response class with a string as content.\n",
-      " |  \n",
-      " |  This content that can be read, appended to, or replaced.\n",
-      " |  \n",
-      " |  Method resolution order:\n",
-      " |      HttpResponse\n",
-      " |      HttpResponseBase\n",
-      " |      builtins.object\n",
-      " |  \n",
-      " |  Methods defined here:\n",
-      " |  \n",
-      " |  __bytes__ = serialize(self)\n",
-      " |  \n",
-      " |  __init__(self, content=b'', *args, **kwargs)\n",
-      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
-      " |  \n",
-      " |  __iter__(self)\n",
-      " |  \n",
-      " |  __repr__(self)\n",
-      " |      Return repr(self).\n",
-      " |  \n",
-      " |  getvalue(self)\n",
-      " |  \n",
-      " |  serialize(self)\n",
-      " |      Full HTTP message, including headers, as a bytestring.\n",
-      " |  \n",
-      " |  tell(self)\n",
-      " |  \n",
-      " |  writable(self)\n",
-      " |  \n",
-      " |  write(self, content)\n",
-      " |  \n",
-      " |  writelines(self, lines)\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data descriptors defined here:\n",
-      " |  \n",
-      " |  content\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data and other attributes defined here:\n",
-      " |  \n",
-      " |  streaming = False\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Methods inherited from HttpResponseBase:\n",
-      " |  \n",
-      " |  __contains__ = has_header(self, header)\n",
-      " |      Case-insensitive check for a header.\n",
-      " |  \n",
-      " |  __delitem__(self, header)\n",
-      " |  \n",
-      " |  __getitem__(self, header)\n",
-      " |  \n",
-      " |  __setitem__(self, header, value)\n",
-      " |  \n",
-      " |  close(self)\n",
-      " |      # The WSGI server must call this method upon completion of the request.\n",
-      " |      # See http://blog.dscpl.com.au/2012/10/obligations-for-calling-close-on.html\n",
-      " |  \n",
-      " |  delete_cookie(self, key, path='/', domain=None)\n",
-      " |  \n",
-      " |  flush(self)\n",
-      " |  \n",
-      " |  get(self, header, alternate=None)\n",
-      " |  \n",
-      " |  has_header(self, header)\n",
-      " |      Case-insensitive check for a header.\n",
-      " |  \n",
-      " |  items(self)\n",
-      " |  \n",
-      " |  make_bytes(self, value)\n",
-      " |      Turn a value into a bytestring encoded in the output charset.\n",
-      " |  \n",
-      " |  readable(self)\n",
-      " |  \n",
-      " |  seekable(self)\n",
-      " |  \n",
-      " |  serialize_headers(self)\n",
-      " |      HTTP headers as a bytestring.\n",
-      " |  \n",
-      " |  set_cookie(self, key, value='', max_age=None, expires=None, path='/', domain=None, secure=False, httponly=False, samesite=None)\n",
-      " |      Set a cookie.\n",
-      " |      \n",
-      " |      ``expires`` can be:\n",
-      " |      - a string in the correct format,\n",
-      " |      - a naive ``datetime.datetime`` object in UTC,\n",
-      " |      - an aware ``datetime.datetime`` object in any time zone.\n",
-      " |      If it is a ``datetime.datetime`` object then calculate ``max_age``.\n",
-      " |  \n",
-      " |  set_signed_cookie(self, key, value, salt='', **kwargs)\n",
-      " |  \n",
-      " |  setdefault(self, key, value)\n",
-      " |      Set a header unless it has already been set.\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data descriptors inherited from HttpResponseBase:\n",
-      " |  \n",
-      " |  __dict__\n",
-      " |      dictionary for instance variables (if defined)\n",
-      " |  \n",
-      " |  __weakref__\n",
-      " |      list of weak references to the object (if defined)\n",
-      " |  \n",
-      " |  charset\n",
-      " |  \n",
-      " |  reason_phrase\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data and other attributes inherited from HttpResponseBase:\n",
-      " |  \n",
-      " |  status_code = 200\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "help(HttpResponse)"
    ]
@@ -268,25 +147,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "from django.shortcuts import render\r\n",
-      "from django.http import HttpResponse\r\n",
-      "\r\n",
-      "# Create your views here.\r\n",
-      "def index(request):\r\n",
-      "    return HttpResponse(\"<h1>Hola, mundo.</h1>\")\r\n",
-      "\r\n",
-      "def calificaciones(request):\r\n",
-      "    pass"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%cat tutorial/main/views.py"
    ]
@@ -347,7 +210,7 @@
    "source": [
     "## TAREA.\n",
     "\n",
-    "Modifique la función *claificaciones()* del archivo *tutorial/main/views.py*  para que regrese un recurso en particular."
+    "Modifique la función *calificaciones()* del archivo *tutorial/main/views.py*  para que regrese un recurso en particular."
    ]
   },
   {
