--- a/08_configuracion_de_bases_de_datos.ipynb
+++ b/08_configuracion_de_bases_de_datos.ipynb
@@ -14,8 +14,7 @@
     "**ADVERTENCIAS:** \n",
     "\n",
     "* Para poder realizar exitosamente los ejercicios de esta notebook, es necesario haber seguido al pie de la letra y en orden sucesivo las instrucciones de todas las notebooks previas.\n",
-    "\n",
-    "* Las configuraciones de las bases de datos utilizadas en este curso dan por sentado de que se están ejecutando en alguna de las  máquinas virtuales proporcionadas en el sitio de Pythonista<sup>®</sup>."
+    "* Se da por sentado de que el sistema desde el que se ejecute esta notebook tiene instalado y habilitado un gestor de bases de datos *MySQL* o *MariaDB* con un usuario *root* acreditado."
    ]
   },
   {
@@ -26,12 +25,14 @@
     "\n",
     "El paquete *django.db.backends* contiene los artefactos o *engines* que *Django* puede utilizar para conectarse a las siguientes bases de datos.\n",
     "\n",
-    "* *PostgreSQL*.\n",
-    "* *MySQL*.\n",
+    "* *PostgreSQL*. Es el gestor de base de datos preferido por los desarrolladores de Django.\n",
+    "* *MySQL*. Este *engine* no funciona correctamente con Python 3.\n",
     "* *Oracle*.\n",
     "* *SQLite*.\n",
     "\n",
-    "**Nota:** Existen proyectos que pueden soportan la creación de modelos en bases de datos NoSQL, tales como [*djongo*](https://nesdis.github.io/djongo/), pero para este curso sólo se estudiarán las bases de datos relacionales soportadas por defecto."
+    "La referencia completa del usos de bases de datos de *Django* puede ser consultada en https://docs.djangoproject.com/en/2.1/ref/databases/\n",
+    "\n",
+    "Existen proyectos que pueden soportan la creaciór de modelos en bases de datos NoSQL, tales como [*djongo*](https://nesdis.github.io/djongo/), pero para este curso sólo se estudiarán las bases de datos relacionales soportadas por defecto."
    ]
   },
   {
@@ -147,11 +148,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Ejemplo:**\n",
+    "## Ejemplo de configuración para dos bases de datos.\n",
     "\n",
-    "* La siguiente configuración define 2 conexiones a bases de datos:\n",
-    "    * *'default'* corresponde al acceso un gestor de  base de datos *SQLite* cuyo archivo se localliza en *tutorial/db.sqlite3*.\n",
-    "    * *'pythonista'* corresponde a los datos de acceso a un gestor base de datos *MySQL* accediendo a la base con nombre *db_django*."
+    "La siguiente configuración que debe de sustituir a la que se encuentra en el archivo *tutorial/tutorial/settings.py* define dos conexiones a bases de datos:\n",
+    "* *'default'* corresponde a:\n",
+    "   * Una conexión a un gestor de  base de datos *SQLite*.\n",
+    "   * El archivo con la base da datos se localiza en *tutorial/db.sqlite3*.\n",
+    "* *'pythonista'* corresponde a: \n",
+    "    * Una conexión a un gestor base de datos *MySQL* utilizando *mysql.connector* como *engine*.\n",
+    "    * Define al usuario *root* con la contraseña *0p3n5t4ck*.\n",
+    "    * Define a la base de datos con nombre *db_django* .\n",
+    "    \n",
+    "**Nota:** En caso de que la contraseña del usuario *root* de MySQL sea distinta de *0p3n5t4ck*, sustitúyala donde corresponda."
    ]
   },
   {
@@ -159,9 +167,9 @@
    "metadata": {},
    "source": [
     "``` python\n",
-    "{'default': {'ENGINE': 'django.db.backends.sqlite3',\n",
+    "DATABASES = {'default': {'ENGINE': 'django.db.backends.sqlite3',\n",
     "             'NAME': '/opt/pythonista/py231/tutorial/db.sqlite3'},\n",
-    " 'pythonista': {'ENGINE': 'django.db.backends.mysql',\n",
+    " 'pythonista': {'ENGINE': 'mysql.connector.django',\n",
     "                'NAME': 'db_django',\n",
     "                'USER': 'root',\n",
     "                'PASSWORD': '0p3n5t4ck',\n",
@@ -175,7 +183,93 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**ADVERTENCIA:** Esta configuración es meramente ilustrativa."
+    "### Instalación de *mysql-connector-python*.\n",
+    "\n",
+    "Debido a que *django.db.backends.mysql no funciona adecuadamente con Python 3, se utilizará  *mysql-connector-python* para conectarse al servidor *MySQL*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "!pip install mysql-connector-python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Este paquete contiene el *engine* *mysql.connector.django*, el cual permite a *Django* acceder a *MySQL*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creación de la base de datos *db_django* en MySQL.\n",
+    "\n",
+    "Para crear una base de datos se instalará y utilizará el comando mágico *%%sql*.\n",
+    "\n",
+    "La referencia a esta herramienta se encuentra en: \n",
+    "\n",
+    "https://github.com/catherinedevlin/ipython-sql"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! pip install ipython-sql mysql"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext sql"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La siguiente celda se conectará al servidor utilizando *mysql-connector-python*.\n",
+    "\n",
+    "**Nota:** En caso de que la contraseña del usuario *root* sea distinta de *0p3n5t4ck*, sustitúyala donde corresponda."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%sql mysql+mysqlconnector://root:0p3n5t4ck@localhost"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La siguiente celda creará la base de datos con nombre *db_django*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql \n",
+    "CREATE DATABASE db_django;"
    ]
   },
   {
@@ -193,6 +287,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ejemplo:**\n",
+    "\n",
+    "* Se hará la sincronización de la configuración con identificador *default*."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -204,10 +307,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "! ./manage.py migrate --database=default"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Se hará la sincronización de la configuración con identificador *pythonista*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! ./manage.py migrate --database=pythonista"
    ]
   },
   {
@@ -243,7 +364,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* En las notebooks previas la ejecución del servidor indicaba ciertas advertencias. En este caso, dichas advertencias dejaron de presentarse debido a que se definió una conexión a una base de datos."
+    "* En las notebooks previas la ejecución del servidor indicaba ciertas advertencias sobre migraciones no ejecutadas. En este caso, dichas advertencias dejaron de presentarse."
    ]
   },
   {
